@@ -5,12 +5,12 @@ noinst_LIBRARIES = libarch_win32.a
 INCLUDES = -I$(top_srcdir)/arch/include -I$(top_srcdir)/include -I$(top_srcdir)/main -I$(srcdir)/include
 
 if USE_NETWORK
-NETWORK_SRCS = winnet.c ipx_win.c ipx_udp.c
+NETWORK_SRCS = winnet.c ipx_win.c
 endif
 
 libarch_win32_a_SOURCES = ${NETWORK_SRCS} findfile.c mingw_init.c
 
-EXTRA_libarch_win32_a_SOURCES = winnet.c ipx_win.c ipx_udp.c
+EXTRA_libarch_win32_a_SOURCES = winnet.c ipx_win.c
 
 EXTRA_DIST = ${EXTRA_SUBDIRS} \
 d1x.ico d1x.rc d3d.ico debug.cpp descent.ico digi.c findfile.c glinit.c gr.c \
